--- a/frontend-webapp/DBS/src/components/styles/others/TransactionDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/others/TransactionDetailsStyles.css
@@ -1,6 +1,8 @@
 .ftdbase{
     height: 100vh;
     width: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
     align-items: center;
     justify-content: center;
     background-color: #f6f6f6;
@@ -39,7 +41,7 @@
     padding-right: 1.5%;
 }
 
-.moneytext2{
+.moneytext2spend{
     font-family: 'Lato';
     font-size: 40px;
     justify-content: center;
@@ -47,7 +49,14 @@
     padding-bottom: 4%;
     color: #444444;
 }
-
+.moneytext2receive{
+    font-family: 'Lato';
+    font-size: 40px;
+    justify-content: center;
+    font-weight: bold;
+    padding-bottom: 4%;
+    color: #007D23;
+}
 
 .txdatetext{
     font-family: 'Lato';
@@ -59,7 +68,6 @@
 }
 
 .scriptbox{
-    height: 30vh;
     width: 90vw;
     margin: auto;
     margin-top: 7%;
@@ -85,17 +93,28 @@
     font-size: 18px;
     font-weight: 500;
     color: #444444;
-    padding: 1vh 8vw -0 8vw;
+    padding: 1vh 8vw 3vh 8vw;
     margin: 0 ;
 
 }
+
 
 .transactiontext1{
     font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
-    padding: 3vh 8vw 0 8vw;
+    padding: 0vh 8vw 0 8vw;
     margin: 0;
+}
+
+.descriptext3{
+    font-family: 'Lato';
+    font-size: 18px;
+    font-weight: 500;
+    color: #444444;
+    padding: 1vh 8vw 7vh 8vw;
+    margin: 0 ;
+
 }
 
 .textcontainerdetail{
@@ -132,6 +151,7 @@
     justify-content: center;
     margin: 0vh 5vw;
     border-radius: 5px;
+    background-color: #1D0C86;
 }
 
 .FTDbuttontext{
@@ -159,7 +179,6 @@
 .txdetailsPop{
     position: fixed;
     width: 70%;
-    height: 28%;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -195,15 +214,13 @@
     font-weight: 500;
 }
 
-.txdpopbutton{
+.popupbtn{
+    width: 60vw;
     display: flex;
-    height: 20%;
-    width: 90%;
-    margin: auto;
-    align-items: center;
     justify-content: center;
     background-color:#066DAf;
     border-radius: 5px;
+    margin: 0 6vw;
 }
 
 .txdpopbuttontext{
