--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ReviewRefuteStyles.css
@@ -68,7 +68,14 @@
     justify-content: center;
     font-weight: bold;
     padding-bottom: 4%;
+}
+
+.reresender-color {
     color: #007D23;
+}
+  
+.rererecipient-color {
+    color: #000000;
 }
 
 .reredescriptionbox{
