--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/FTDTransactionDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/FTDTransactionDetailsStyles.css
@@ -6,6 +6,7 @@
     padding: 0;
     margin: 0;
     margin-top: -3.5vh;
+    margin-bottom: -7vh;
 }
 
 .sgddispute {
@@ -33,10 +34,26 @@
     padding-bottom: 4%;
 }
 
+
+.transactdatecontainer{
+    margin: 0;
+    padding: 0;
+}
+.transactiondatefordispute{
+    font-family: 'Lato';
+    margin: 0;
+    padding: 0;
+    color: #444444;
+    font-weight: bold;
+    text-align: center;
+    font-size: 16px;
+    padding: 1vh ;
+}
+
 .transactiondetailscontainerbox {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
     padding: 0;
-    margin: -6vh 5vw 0 5vw
+    margin: 0 5vw 0 5vw
 }
 .transactiondetailstitlestext{
     font-family: 'Lato';
