--- a/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveDisputeRefundScreenStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/fund transfer dispute/ResolveDisputeRefundScreenStyles.css
@@ -6,7 +6,7 @@
     overflow-y: hidden;
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: #f6f6f6;
     max-width: 100vw;
     min-width: 100vw;
     
@@ -93,7 +93,7 @@
     font-size: 16px;
     font-family: 'Lato';
     font-weight: bold;
-    color: #2D2D2D;
+    color: #444444;
     overflow: hidden;
 }
 
@@ -102,11 +102,25 @@
     width: 100vw;
     align-self: left;
     background-color: transparent;
-    color: #2D2D2D;
+    color: #444444;
     font-size: 14px;
     padding: 0;
     margin: 0;
     overflow: hidden;
+}
+
+
+.accountnumber10{
+    height: 100vh;
+    width: 100vw;
+    align-self: left;
+    background-color: transparent;
+    color: #444444;
+    font-size: 16px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    font-weight: bold;
 }
 
 .gif1{
@@ -130,6 +144,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    width: 100vw;
 }
 
 .leftside1{
@@ -166,7 +181,7 @@
 
 .refundamount1{
     align-self: right;
-    font-size: 24px;
+    font-size: 28px;
     color:white;
     font-family: 'Lato';
     font-weight: 800;
