--- a/frontend-webapp/DBS/src/components/styles/others/TransactionDetailsStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/others/TransactionDetailsStyles.css
@@ -8,9 +8,9 @@
 
 .backtransaction {
     object-fit: contain;
-    width: 3.5vw;
-    padding-left: 3vw;
-    margin-top: 2vh;
+    width: 3vw;
+    padding-left: 2vw;
+    margin-top: 3vh;
 }
 
 .transparent {
@@ -47,14 +47,22 @@
     padding-bottom: 4%;
 }
 
-.txdxsender-color {
+.moneytext2spend{
+    font-family: 'Lato';
+    font-size: 40px;
+    justify-content: center;
+    font-weight: bold;
+    padding-bottom: 4%;
+    color: #444444;
+}
+.moneytext2receive{
+    font-family: 'Lato';
+    font-size: 40px;
+    justify-content: center;
+    font-weight: bold;
+    padding-bottom: 4%;
     color: #007D23;
 }
-  
-.txdxrecipient-color {
-    color: #000000;
-}
-
 
 .txdatetext{
     font-family: 'Lato';
@@ -92,7 +100,17 @@
     font-size: 18px;
     font-weight: 500;
     color: #444444;
-    padding: 1vh 8vw -0 8vw;
+    padding: 1vh 8vw 3vh 8vw;
+    margin: 0 ;
+
+}
+
+.descriptext3{
+    font-family: 'Lato';
+    font-size: 18px;
+    font-weight: 500;
+    color: #444444;
+    padding: 1vh 8vw 7vh 8vw;
     margin: 0 ;
 
 }
@@ -101,7 +119,7 @@
     font-family: 'Lato';
     font-size: 16px;
     color: #a3a3a3;
-    padding: 3vh 8vw 0 8vw;
+    padding: 0vh 8vw 0 8vw;
     margin: 0;
 }
 
@@ -203,15 +221,16 @@
     font-weight: 500;
 }
 
-.txdpopbutton{
+.popupbtn{
+    width: 60vw;
     display: flex;
     height: 20%;
-    width: 90%;
     margin: auto;
     align-items: center;
     justify-content: center;
     background-color:#066DAf;
     border-radius: 5px;
+    margin: 0 6vw;
 }
 
 .txdpopbuttontext{
