--- a/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/others/ReviewTransferStyles.css
@@ -1,139 +1,95 @@
-.ReviewTransferMain {
-    width: 100vw;
-    height: 100vh;
-    max-width: 100vw;
-    max-height: 100vh;
-}
-
-.ReviewTransferHeader {
-    display: flex;
-    background-color: white;
-}
-
-.ReviewTransferHeaderText {
-    flex:1;
-    font-family: 'Lato';
-    font-weight: bold;
-    font-size: 18px;
-    color: #444444;
-    text-align: left;
-    padding-left: 5%;
-}
-
-.ReviewTransferLine {
-    width: 100vw;
-    height: 1px;
-    background-color: #a3a3a3;
-}
-
 .ReviewTransferBody {
     display:flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 5%;
+    padding-top: 10%;
 }
 
 .ReviewTransferBox {
-    width: 85%;
-    height: 50%;
-    border-radius: 20px;
+    width: 90vw;
+    border-radius: 10px;
     background: linear-gradient(to bottom, #162633 0%, #162633 25%, white 25%);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    position: absolute;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    height: auto;
 }
 
-.ReviewTransferBoxBlue {
-    height: 20%;
-}
 
 .ReviewTransferBoxBlueText{
     font-family: 'Lato';
-    font-size: 12px;
+    font-size: 14px;
     font-weight: medium;
     color: #c3ccd3;
-    margin-top: 10%;
+    margin-top: 7%;
     margin-left: 5%;
+    padding: 0;
 }
 
 .ReviewTransferBoxBlueSubText{
     display: flex;
     flex-direction: row;
-    height: 40%;
+    justify-content: space-between;
+    align-content: center;
     width: 100%;
-    margin-top: -3%;
+    margin-top: -4%;
     background-color: transparent;
+    margin-bottom: 0;
+    padding: 0;
 }
 
 .ReviewTransferBoxBlueSubTextLeft{
     font-family: 'Lato';
-    font-size: 25px;
+    font-size: 24px;
     font-weight: bold;
     color: #c3ccd3;
     margin-block-start: auto;
+    margin-top: 0;
 }
 
 .ReviewTransferBoxBlueSubTextRight{
     font-family: 'Lato';
-    font-size: 25px;
+    font-size: 30px;
     font-weight: bold;
     color: #c3ccd3;
     margin-block-start: auto;
-    padding-left: 55%;
-
+    margin: 0;
+    margin-right: 5vw;
+    padding: 0;
+    margin-top: -2%;
 }
 
 .ReviewTransferBoxWhite {
-    height: 80%;
-    padding: 5%;
+    padding-left: 5%;
+    margin-top: -5%;
+}
+.Chunk{
+    margin-top: 1vh;
+    margin-bottom: 2vh;
 }
 
-.Chunk {
-    line-height: 20%;
-    margin-bottom: 10%;
+.Chunk1{
+    margin-top: 3vh;
 }
 
-.from {
-    font-size: small;
-    color: gray;
+.Chunk2{
+    margin-bottom: 2vh;
+}
+.reviewtext {
+    font-size: 16px;
+    color: #a3a3a3;
+    padding: 0;
+    margin: 0;
 }
 
-.RecipientAccountNo {
-    font-size: small;
-    color: gray;
+.accounttextname{
+    font-family: 'Lato';
+    font-size: 18px;
+    color: #444444;
+    padding: 0;
+    margin: 0;
 }
 
-.to {
-    font-size: small;
-    color: gray;
-}
-
-.SenderAccountNo {
-    font-size: small;
-    color: gray;
-}
-
-.transfertype {
-    font-size: small;
-    color: gray;
-}
-
-.yourcomments {
-    font-size: small;
-    color: gray;
-}
-
-.ReviewTransferForm {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items:center;
-    width: 90vw;
-}
 
 .TransferNow {
-    margin-top: 45%;
-    margin-left: -5%;
-    padding: 2vh;
     border-radius: 5px;
     font-size: 18px;
     font-family: "Lato";
@@ -141,4 +97,35 @@
     color: white;
     border: none;
     width: 90vw;
+    padding: 2vh;
+    margin: 0;
+    position:absolute;
+    bottom: 4vh;
+    margin: 0 5vw 0 5vw;
+}
+
+.TransferPayNow {
+    margin: 0 5vw 0vh 5vw;
+    padding: 2vh;
+    border-radius: 5px;
+    font-size: 18px;
+    font-family: "Lato";
+    background-color:#066DAF ;
+    color: white;
+    border: none;
+    width: 90vw;
+    position: absolute;
+    bottom: 4vh;
+}
+
+
+.TransferPayNow:active {
+    opacity: 0.5;
+    transition: none;
+  }
+
+
+.TransferNow:active {
+    opacity: 0.5;
+    transition: none;
 }
