--- a/frontend-webapp/DBS/src/components/styles/paynow/EnterRecipientStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/EnterRecipientStyles.css
@@ -75,12 +75,17 @@
     width: 1.5vh;
     padding-top: 2.1vh;
     padding-left: 0.5vh;
+    margin-right: 2vw;
 }
 
 .eightdigitER{
-    padding-left: 1.5vh;
-    padding-top: 1.5vh;
+    margin: 3.5vh 0 0 0;
     background-color: transparent;
+    font-family: 'Lato';
+    font-weight: 800;
+    color: black;
+    font-size: 18px;
+
 }
 
 .senderboxER{
