--- a/frontend-webapp/DBS/src/components/styles/paynow/PayNowTransactionPageStyles.css
+++ b/frontend-webapp/DBS/src/components/styles/paynow/PayNowTransactionPageStyles.css
@@ -13,6 +13,19 @@
     position: absolute
 }
 
+.inputAmount{
+    background-color: transparent;
+    direction: rtl;
+    width: fit-content;
+    font-size: 24px;
+    color:white;
+    font-family: 'Lato';
+    font-weight: 800;
+    padding: 0;
+    margin-right: 1vh;
+    margin-top: 4vh;
+}
+
 .bibibaba{
     margin:0;
     padding:0;
@@ -115,9 +128,11 @@
 .commentsPNT{
     font-size: 16px;
     font-family: 'Lato';
+    color: black;
     font-weight: 800;
-    margin: 0vh 0 2vh 5vw;
+    margin: 1vh 0 2vh 5vw;
     background-color: transparent;
+    white-space: nowrap;
 }
 
 .LIMITSbutton1{
